# fuck-your-charges

./: AGENTS.md  Cargo.toml  Makefile  README.md  SEPC.md  fuck_your_charges  makefile  privacy-policy.html  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
cli/: Cargo.toml
cli/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
flutter_bridge/: Cargo.toml
flutter_bridge/src/: frb_generated.rs
flutter_bridge/src/api/: simple.rs
flutter_gui/: README.md  pubspec.yaml
flutter_gui/integration_test/: simple_test.dart
flutter_gui/ios/Runner/: Info.plist
flutter_gui/ios/Runner.xcodeproj/: project.pbxproj
flutter_gui/lib/: main.dart
flutter_gui/linux/flutter/: generated_plugins.cmake
flutter_gui/rust_builder/: pubspec.yaml
flutter_gui/web/: manifest.json
flutter_gui/windows/runner/: main.cpp
http_server/: Cargo.toml
http_server/src/: html_template.rs  main.rs
http_server/templates/: fuck-your-charges-form.html  fuck-your-charges-reponse.html  fuck-your-charges-response.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: charge_calculator.dart  charge_calculator_config_page.dart  charge_config_page.dart  charge_entry.dart  main.dart  price_entry.dart  price_row.dart  price_tracker.dart  prices_page.dart  total_breakdown.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
src/: charges_calculator.rs  http_server.rs  main.rs
test/: charge_calculator_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+19 files in other folders)
