[package]
name = "fuck_your_charges"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0.16"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
