[package]
name = "rust_lib_flutter_gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
domain = { path = "../domain" }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
