[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
axum = "0.8.1"
askama = "0.12"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
